--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "nodemon": "^2.0.19",
     "socket.io": "^4.1.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   }
 }
