--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^9.13.0",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.19",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.5.3"
   },
   "scripts": {
     "start": "nodemon index.js"
